tools/parser.output
State 225 conflicts: 1 shift/reduce


Grammar

    0 $accept: input $end

    1 input: program

    2 program: /* empty */
    3        | program meta_statement
    4        | program global_data
    5        | program function_def

    6 meta_statement: TOK_MEMADDR TOK_NUMBER
    7               | TOK_TRAMPOLINE TOK_NUMBER TOK_ID
    8               | TOK_SECTION TOK_NUMBER TOK_NUMBER TOK_ID

    9 array_type: TOK_ARRAY_8U
   10           | TOK_ARRAY_8S
   11           | TOK_ARRAY_16

   12 global_type: TOK_GLOBAL
   13            | TOK_GLOBAL_8U
   14            | TOK_GLOBAL_8S

   15 number: TOK_NUMBER
   16       | '+' TOK_NUMBER
   17       | '-' TOK_NUMBER

   18 array_init_data: /* empty */
   19                | number
   20                | array_init_data ',' number

   21 array_init: /* empty */
   22           | '=' '{' array_init_data '}'

   23 global_var_init: /* empty */
   24                | '=' number

   25 maybe_extern: /* empty */
   26             | TOK_EXTERN TOK_NUMBER

   27 global_data: maybe_extern global_type TOK_ID global_var_init ';'
   28            | maybe_extern array_type TOK_ID '[' TOK_NUMBER ']' array_init ';'

   29 function_head: maybe_extern TOK_FUNCTION

   30 function_def: function_head TOK_ID '(' function_args ')' ';'
   31             | function_head TOK_ID '(' function_args ')' '{' function_vars function_body '}'

   32 function_args: /* empty */
   33              | TOK_ID
   34              | function_args ',' TOK_ID

   35 function_vars: /* empty */
   36              | function_var_list ';'

   37 function_var_list: TOK_LOCAL TOK_ID
   38                  | function_var_list ',' TOK_ID
   39                  | function_var_list ';' TOK_LOCAL TOK_ID

   40 function_body: /* empty */
   41              | function_body statement

   42 statement_list: /* empty */
   43               | statement_list statement

   44 statement: TOK_ID ':' statement
   45          | TOK_GOTO TOK_ID ';'
   46          | core_statement ';'
   47          | '{' statement_list '}'
   48          | TOK_IF '(' expression ')' statement
   49          | TOK_IF '(' expression ')' statement TOK_ELSE statement
   50          | TOK_DO loop_body TOK_WHILE '(' expression ')' ';'
   51          | TOK_WHILE '(' expression ')' loop_body
   52          | TOK_FOR '(' maybe_core_statement ';' expression ';' maybe_core_statement ')' loop_body
   53          | TOK_FOR '(' maybe_core_statement ';' ';' maybe_core_statement ')' loop_body
   54          | TOK_BREAK ';'
   55          | TOK_CONTINUE ';'
   56          | TOK_RETURN expression ';'
   57          | TOK_RETURN ';'

   58 @1: /* empty */

   59 loop_body: @1 statement

   60 combined_assign: TOK_ASSIGN_ADD
   61                | TOK_ASSIGN_SUB
   62                | TOK_ASSIGN_MUL
   63                | TOK_ASSIGN_DIV
   64                | TOK_ASSIGN_MOD
   65                | TOK_ASSIGN_SHL
   66                | TOK_ASSIGN_SHR
   67                | TOK_ASSIGN_AND
   68                | TOK_ASSIGN_OR
   69                | TOK_ASSIGN_XOR

   70 core_statement: func_expression
   71               | TOK_INC lvalue
   72               | TOK_DEC lvalue
   73               | lvalue TOK_INC
   74               | lvalue TOK_DEC
   75               | lvalue combined_assign expression
   76               | lvalue '=' expression

   77 maybe_core_statement: /* empty */
   78                     | core_statement

   79 ptr_type: TOK_PTR_8U
   80         | TOK_PTR_8S
   81         | TOK_PTR_16

   82 ptr_index: /* empty */
   83          | ',' expression

   84 lvalue: TOK_ID
   85       | TOK_ID '[' expression ']'
   86       | ptr_type '[' expression ptr_index ']'

   87 func_expression: TOK_ID '(' func_call_args ')'
   88                | TOK_USERFUNC '(' func_call_args ')'
   89                | TOK_PTR_F '[' expression ']' '(' func_call_args ')'

   90 expression: func_expression
   91           | '(' expression ')'
   92           | TOK_NUMBER
   93           | TOK_LINE
   94           | TOK_VMIP
   95           | TOK_VMSP
   96           | TOK_VMSFP
   97           | lvalue
   98           | '&' TOK_ID
   99           | '+' expression
  100           | expression '+' expression
  101           | expression '-' expression
  102           | expression '*' expression
  103           | expression '/' expression
  104           | expression '%' expression
  105           | expression TOK_SHL expression
  106           | expression TOK_SHR expression
  107           | expression '&' expression
  108           | expression '|' expression
  109           | expression '^' expression
  110           | expression TOK_LAND expression
  111           | expression TOK_LOR expression
  112           | '~' expression
  113           | '-' expression
  114           | '!' expression
  115           | expression '<' expression
  116           | expression TOK_LE expression
  117           | expression TOK_EQ expression
  118           | expression TOK_NE expression
  119           | expression TOK_GE expression
  120           | expression '>' expression
  121           | TOK_INC lvalue
  122           | TOK_DEC lvalue
  123           | lvalue TOK_INC
  124           | lvalue TOK_DEC
  125           | expression '?' expression ':' expression

  126 func_call_args: /* empty */
  127               | expression
  128               | func_call_args ',' expression


Terminals, with rules where they appear

$end (0) 0
'!' (33) 114
'%' (37) 104
'&' (38) 98 107
'(' (40) 30 31 48 49 50 51 52 53 87 88 89 91
')' (41) 30 31 48 49 50 51 52 53 87 88 89 91
'*' (42) 102
'+' (43) 16 99 100
',' (44) 20 34 38 83 128
'-' (45) 17 101 113
'/' (47) 103
':' (58) 44 125
';' (59) 27 28 30 36 39 45 46 50 52 53 54 55 56 57
'<' (60) 115
'=' (61) 22 24 76
'>' (62) 120
'?' (63) 125
'[' (91) 28 85 86 89
']' (93) 28 85 86 89
'^' (94) 109
'{' (123) 22 31 47
'|' (124) 108
'}' (125) 22 31 47
'~' (126) 112
error (256)
TOK_NUMBER (258) 6 7 8 15 16 17 26 28 92
TOK_USERFUNC (259) 88
TOK_ID (260) 7 8 27 28 30 31 33 34 37 38 39 44 45 84 85 87 98
TOK_IF (261) 48 49
TOK_ELSE (262) 49
TOK_DO (263) 50
TOK_FOR (264) 52 53
TOK_WHILE (265) 50 51
TOK_BREAK (266) 54
TOK_CONTINUE (267) 55
TOK_GOTO (268) 45
TOK_RETURN (269) 56 57
TOK_FUNCTION (270) 29
TOK_LOCAL (271) 37 39
TOK_GLOBAL (272) 12
TOK_GLOBAL_8U (273) 13
TOK_GLOBAL_8S (274) 14
TOK_ARRAY_8U (275) 9
TOK_ARRAY_8S (276) 10
TOK_ARRAY_16 (277) 11
TOK_EXTERN (278) 26
TOK_MEMADDR (279) 6
TOK_SECTION (280) 8
TOK_TRAMPOLINE (281) 7
TOK_LINE (282) 93
TOK_VMIP (283) 94
TOK_VMSP (284) 95
TOK_VMSFP (285) 96
TOK_PTR_8U (286) 79
TOK_PTR_8S (287) 80
TOK_PTR_16 (288) 81
TOK_PTR_F (289) 89
TOK_LOR (290) 111
TOK_LAND (291) 110
TOK_NE (292) 118
TOK_EQ (293) 117
TOK_GE (294) 119
TOK_LE (295) 116
TOK_SHR (296) 106
TOK_SHL (297) 105
NEG (298)
TOK_DEC (299) 72 74 122 124
TOK_INC (300) 71 73 121 123
TOK_ASSIGN_ADD (301) 60
TOK_ASSIGN_SUB (302) 61
TOK_ASSIGN_MUL (303) 62
TOK_ASSIGN_DIV (304) 63
TOK_ASSIGN_MOD (305) 64
TOK_ASSIGN_SHL (306) 65
TOK_ASSIGN_SHR (307) 66
TOK_ASSIGN_AND (308) 67
TOK_ASSIGN_OR (309) 68
TOK_ASSIGN_XOR (310) 69


Nonterminals, with rules where they appear

$accept (79)
    on left: 0
input (80)
    on left: 1, on right: 0
program (81)
    on left: 2 3 4 5, on right: 1 3 4 5
meta_statement (82)
    on left: 6 7 8, on right: 3
array_type (83)
    on left: 9 10 11, on right: 28
global_type (84)
    on left: 12 13 14, on right: 27
number (85)
    on left: 15 16 17, on right: 19 20 24
array_init_data (86)
    on left: 18 19 20, on right: 20 22
array_init (87)
    on left: 21 22, on right: 28
global_var_init (88)
    on left: 23 24, on right: 27
maybe_extern (89)
    on left: 25 26, on right: 27 28 29
global_data (90)
    on left: 27 28, on right: 4
function_head (91)
    on left: 29, on right: 30 31
function_def (92)
    on left: 30 31, on right: 5
function_args (93)
    on left: 32 33 34, on right: 30 31 34
function_vars (94)
    on left: 35 36, on right: 31
function_var_list (95)
    on left: 37 38 39, on right: 36 38 39
function_body (96)
    on left: 40 41, on right: 31 41
statement_list (97)
    on left: 42 43, on right: 43 47
statement (98)
    on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57,
    on right: 41 43 44 48 49 59
loop_body (99)
    on left: 59, on right: 50 51 52 53
@1 (100)
    on left: 58, on right: 59
combined_assign (101)
    on left: 60 61 62 63 64 65 66 67 68 69, on right: 75
core_statement (102)
    on left: 70 71 72 73 74 75 76, on right: 46 78
maybe_core_statement (103)
    on left: 77 78, on right: 52 53
ptr_type (104)
    on left: 79 80 81, on right: 86
ptr_index (105)
    on left: 82 83, on right: 86
lvalue (106)
    on left: 84 85 86, on right: 71 72 73 74 75 76 97 121 122 123 124
func_expression (107)
    on left: 87 88 89, on right: 70 90
expression (108)
    on left: 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
    106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121
    122 123 124 125, on right: 48 49 50 51 52 56 75 76 83 85 86 89
    91 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114
    115 116 117 118 119 120 125 127 128
func_call_args (109)
    on left: 126 127 128, on right: 87 88 89 128


state 0

    0 $accept: . input $end
    1 input: . program
    2 program: .
    3        | . program meta_statement
    4        | . program global_data
    5        | . program function_def

    $default  reduce using rule 2 (program)

    input    go to state 1
    program  go to state 2


state 1

    0 $accept: input . $end

    $end  shift, and go to state 3


state 2

    1 input: program .  [$end]
    3 program: program . meta_statement
    4        | program . global_data
    5        | program . function_def
    6 meta_statement: . TOK_MEMADDR TOK_NUMBER
    7               | . TOK_TRAMPOLINE TOK_NUMBER TOK_ID
    8               | . TOK_SECTION TOK_NUMBER TOK_NUMBER TOK_ID
   25 maybe_extern: .  [TOK_FUNCTION, TOK_GLOBAL, TOK_GLOBAL_8U, TOK_GLOBAL_8S, TOK_ARRAY_8U, TOK_ARRAY_8S, TOK_ARRAY_16]
   26             | . TOK_EXTERN TOK_NUMBER
   27 global_data: . maybe_extern global_type TOK_ID global_var_init ';'
   28            | . maybe_extern array_type TOK_ID '[' TOK_NUMBER ']' array_init ';'
   29 function_head: . maybe_extern TOK_FUNCTION
   30 function_def: . function_head TOK_ID '(' function_args ')' ';'
   31             | . function_head TOK_ID '(' function_args ')' '{' function_vars function_body '}'

    TOK_EXTERN      shift, and go to state 4
    TOK_MEMADDR     shift, and go to state 5
    TOK_SECTION     shift, and go to state 6
    TOK_TRAMPOLINE  shift, and go to state 7

    $end      reduce using rule 1 (input)
    $default  reduce using rule 25 (maybe_extern)

    meta_statement  go to state 8
    maybe_extern    go to state 9
    global_data     go to state 10
    function_head   go to state 11
    function_def    go to state 12


state 3

    0 $accept: input $end .

    $default  accept


state 4

   26 maybe_extern: TOK_EXTERN . TOK_NUMBER

    TOK_NUMBER  shift, and go to state 13


state 5

    6 meta_statement: TOK_MEMADDR . TOK_NUMBER

    TOK_NUMBER  shift, and go to state 14


state 6

    8 meta_statement: TOK_SECTION . TOK_NUMBER TOK_NUMBER TOK_ID

    TOK_NUMBER  shift, and go to state 15


state 7

    7 meta_statement: TOK_TRAMPOLINE . TOK_NUMBER TOK_ID

    TOK_NUMBER  shift, and go to state 16


state 8

    3 program: program meta_statement .

    $default  reduce using rule 3 (program)


state 9

    9 array_type: . TOK_ARRAY_8U
   10           | . TOK_ARRAY_8S
   11           | . TOK_ARRAY_16
   12 global_type: . TOK_GLOBAL
   13            | . TOK_GLOBAL_8U
   14            | . TOK_GLOBAL_8S
   27 global_data: maybe_extern . global_type TOK_ID global_var_init ';'
   28            | maybe_extern . array_type TOK_ID '[' TOK_NUMBER ']' array_init ';'
   29 function_head: maybe_extern . TOK_FUNCTION

    TOK_FUNCTION   shift, and go to state 17
    TOK_GLOBAL     shift, and go to state 18
    TOK_GLOBAL_8U  shift, and go to state 19
    TOK_GLOBAL_8S  shift, and go to state 20
    TOK_ARRAY_8U   shift, and go to state 21
    TOK_ARRAY_8S   shift, and go to state 22
    TOK_ARRAY_16   shift, and go to state 23

    array_type   go to state 24
    global_type  go to state 25


state 10

    4 program: program global_data .

    $default  reduce using rule 4 (program)


state 11

   30 function_def: function_head . TOK_ID '(' function_args ')' ';'
   31             | function_head . TOK_ID '(' function_args ')' '{' function_vars function_body '}'

    TOK_ID  shift, and go to state 26


state 12

    5 program: program function_def .

    $default  reduce using rule 5 (program)


state 13

   26 maybe_extern: TOK_EXTERN TOK_NUMBER .

    $default  reduce using rule 26 (maybe_extern)


state 14

    6 meta_statement: TOK_MEMADDR TOK_NUMBER .

    $default  reduce using rule 6 (meta_statement)


state 15

    8 meta_statement: TOK_SECTION TOK_NUMBER . TOK_NUMBER TOK_ID

    TOK_NUMBER  shift, and go to state 27


state 16

    7 meta_statement: TOK_TRAMPOLINE TOK_NUMBER . TOK_ID

    TOK_ID  shift, and go to state 28


state 17

   29 function_head: maybe_extern TOK_FUNCTION .

    $default  reduce using rule 29 (function_head)


state 18

   12 global_type: TOK_GLOBAL .

    $default  reduce using rule 12 (global_type)


state 19

   13 global_type: TOK_GLOBAL_8U .

    $default  reduce using rule 13 (global_type)


state 20

   14 global_type: TOK_GLOBAL_8S .

    $default  reduce using rule 14 (global_type)


state 21

    9 array_type: TOK_ARRAY_8U .

    $default  reduce using rule 9 (array_type)


state 22

   10 array_type: TOK_ARRAY_8S .

    $default  reduce using rule 10 (array_type)


state 23

   11 array_type: TOK_ARRAY_16 .

    $default  reduce using rule 11 (array_type)


state 24

   28 global_data: maybe_extern array_type . TOK_ID '[' TOK_NUMBER ']' array_init ';'

    TOK_ID  shift, and go to state 29


state 25

   27 global_data: maybe_extern global_type . TOK_ID global_var_init ';'

    TOK_ID  shift, and go to state 30


state 26

   30 function_def: function_head TOK_ID . '(' function_args ')' ';'
   31             | function_head TOK_ID . '(' function_args ')' '{' function_vars function_body '}'

    '('  shift, and go to state 31


state 27

    8 meta_statement: TOK_SECTION TOK_NUMBER TOK_NUMBER . TOK_ID

    TOK_ID  shift, and go to state 32


state 28

    7 meta_statement: TOK_TRAMPOLINE TOK_NUMBER TOK_ID .

    $default  reduce using rule 7 (meta_statement)


state 29

   28 global_data: maybe_extern array_type TOK_ID . '[' TOK_NUMBER ']' array_init ';'

    '['  shift, and go to state 33


state 30

   23 global_var_init: .  [';']
   24                | . '=' number
   27 global_data: maybe_extern global_type TOK_ID . global_var_init ';'

    '='  shift, and go to state 34

    $default  reduce using rule 23 (global_var_init)

    global_var_init  go to state 35


state 31

   30 function_def: function_head TOK_ID '(' . function_args ')' ';'
   31             | function_head TOK_ID '(' . function_args ')' '{' function_vars function_body '}'
   32 function_args: .  [',', ')']
   33              | . TOK_ID
   34              | . function_args ',' TOK_ID

    TOK_ID  shift, and go to state 36

    $default  reduce using rule 32 (function_args)

    function_args  go to state 37


state 32

    8 meta_statement: TOK_SECTION TOK_NUMBER TOK_NUMBER TOK_ID .

    $default  reduce using rule 8 (meta_statement)


state 33

   28 global_data: maybe_extern array_type TOK_ID '[' . TOK_NUMBER ']' array_init ';'

    TOK_NUMBER  shift, and go to state 38


state 34

   15 number: . TOK_NUMBER
   16       | . '+' TOK_NUMBER
   17       | . '-' TOK_NUMBER
   24 global_var_init: '=' . number

    TOK_NUMBER  shift, and go to state 39
    '+'         shift, and go to state 40
    '-'         shift, and go to state 41

    number  go to state 42


state 35

   27 global_data: maybe_extern global_type TOK_ID global_var_init . ';'

    ';'  shift, and go to state 43


state 36

   33 function_args: TOK_ID .

    $default  reduce using rule 33 (function_args)


state 37

   30 function_def: function_head TOK_ID '(' function_args . ')' ';'
   31             | function_head TOK_ID '(' function_args . ')' '{' function_vars function_body '}'
   34 function_args: function_args . ',' TOK_ID

    ','  shift, and go to state 44
    ')'  shift, and go to state 45


state 38

   28 global_data: maybe_extern array_type TOK_ID '[' TOK_NUMBER . ']' array_init ';'

    ']'  shift, and go to state 46


state 39

   15 number: TOK_NUMBER .

    $default  reduce using rule 15 (number)


state 40

   16 number: '+' . TOK_NUMBER

    TOK_NUMBER  shift, and go to state 47


state 41

   17 number: '-' . TOK_NUMBER

    TOK_NUMBER  shift, and go to state 48


state 42

   24 global_var_init: '=' number .

    $default  reduce using rule 24 (global_var_init)


state 43

   27 global_data: maybe_extern global_type TOK_ID global_var_init ';' .

    $default  reduce using rule 27 (global_data)


state 44

   34 function_args: function_args ',' . TOK_ID

    TOK_ID  shift, and go to state 49


state 45

   30 function_def: function_head TOK_ID '(' function_args ')' . ';'
   31             | function_head TOK_ID '(' function_args ')' . '{' function_vars function_body '}'

    '{'  shift, and go to state 50
    ';'  shift, and go to state 51


state 46

   21 array_init: .  [';']
   22           | . '=' '{' array_init_data '}'
   28 global_data: maybe_extern array_type TOK_ID '[' TOK_NUMBER ']' . array_init ';'

    '='  shift, and go to state 52

    $default  reduce using rule 21 (array_init)

    array_init  go to state 53


state 47

   16 number: '+' TOK_NUMBER .

    $default  reduce using rule 16 (number)


state 48

   17 number: '-' TOK_NUMBER .

    $default  reduce using rule 17 (number)


state 49

   34 function_args: function_args ',' TOK_ID .

    $default  reduce using rule 34 (function_args)


state 50

   31 function_def: function_head TOK_ID '(' function_args ')' '{' . function_vars function_body '}'
   35 function_vars: .  [TOK_USERFUNC, TOK_ID, TOK_IF, TOK_DO, TOK_FOR, TOK_WHILE, TOK_BREAK, TOK_CONTINUE, TOK_GOTO, TOK_RETURN, TOK_PTR_8U, TOK_PTR_8S, TOK_PTR_16, TOK_PTR_F, TOK_DEC, TOK_INC, '{', '}']
   36              | . function_var_list ';'
   37 function_var_list: . TOK_LOCAL TOK_ID
   38                  | . function_var_list ',' TOK_ID
   39                  | . function_var_list ';' TOK_LOCAL TOK_ID

    TOK_LOCAL  shift, and go to state 54

    $default  reduce using rule 35 (function_vars)

    function_vars      go to state 55
    function_var_list  go to state 56


state 51

   30 function_def: function_head TOK_ID '(' function_args ')' ';' .

    $default  reduce using rule 30 (function_def)


state 52

   22 array_init: '=' . '{' array_init_data '}'

    '{'  shift, and go to state 57


state 53

   28 global_data: maybe_extern array_type TOK_ID '[' TOK_NUMBER ']' array_init . ';'

    ';'  shift, and go to state 58


state 54

   37 function_var_list: TOK_LOCAL . TOK_ID

    TOK_ID  shift, and go to state 59


state 55

   31 function_def: function_head TOK_ID '(' function_args ')' '{' function_vars . function_body '}'
   40 function_body: .
   41              | . function_body statement

    $default  reduce using rule 40 (function_body)

    function_body  go to state 60


state 56

   36 function_vars: function_var_list . ';'
   38 function_var_list: function_var_list . ',' TOK_ID
   39                  | function_var_list . ';' TOK_LOCAL TOK_ID

    ','  shift, and go to state 61
    ';'  shift, and go to state 62


state 57

   15 number: . TOK_NUMBER
   16       | . '+' TOK_NUMBER
   17       | . '-' TOK_NUMBER
   18 array_init_data: .  [',', '}']
   19                | . number
   20                | . array_init_data ',' number
   22 array_init: '=' '{' . array_init_data '}'

    TOK_NUMBER  shift, and go to state 39
    '+'         shift, and go to state 40
    '-'         shift, and go to state 41

    $default  reduce using rule 18 (array_init_data)

    number           go to state 63
    array_init_data  go to state 64


state 58

   28 global_data: maybe_extern array_type TOK_ID '[' TOK_NUMBER ']' array_init ';' .

    $default  reduce using rule 28 (global_data)


state 59

   37 function_var_list: TOK_LOCAL TOK_ID .

    $default  reduce using rule 37 (function_var_list)


state 60

   31 function_def: function_head TOK_ID '(' function_args ')' '{' function_vars function_body . '}'
   41 function_body: function_body . statement
   44 statement: . TOK_ID ':' statement
   45          | . TOK_GOTO TOK_ID ';'
   46          | . core_statement ';'
   47          | . '{' statement_list '}'
   48          | . TOK_IF '(' expression ')' statement
   49          | . TOK_IF '(' expression ')' statement TOK_ELSE statement
   50          | . TOK_DO loop_body TOK_WHILE '(' expression ')' ';'
   51          | . TOK_WHILE '(' expression ')' loop_body
   52          | . TOK_FOR '(' maybe_core_statement ';' expression ';' maybe_core_statement ')' loop_body
   53          | . TOK_FOR '(' maybe_core_statement ';' ';' maybe_core_statement ')' loop_body
   54          | . TOK_BREAK ';'
   55          | . TOK_CONTINUE ';'
   56          | . TOK_RETURN expression ';'
   57          | . TOK_RETURN ';'
   70 core_statement: . func_expression
   71               | . TOK_INC lvalue
   72               | . TOK_DEC lvalue
   73               | . lvalue TOK_INC
   74               | . lvalue TOK_DEC
   75               | . lvalue combined_assign expression
   76               | . lvalue '=' expression
   79 ptr_type: . TOK_PTR_8U
   80         | . TOK_PTR_8S
   81         | . TOK_PTR_16
   84 lvalue: . TOK_ID
   85       | . TOK_ID '[' expression ']'
   86       | . ptr_type '[' expression ptr_index ']'
   87 func_expression: . TOK_ID '(' func_call_args ')'
   88                | . TOK_USERFUNC '(' func_call_args ')'
   89                | . TOK_PTR_F '[' expression ']' '(' func_call_args ')'

    TOK_USERFUNC  shift, and go to state 65
    TOK_ID        shift, and go to state 66
    TOK_IF        shift, and go to state 67
    TOK_DO        shift, and go to state 68
    TOK_FOR       shift, and go to state 69
    TOK_WHILE     shift, and go to state 70
    TOK_BREAK     shift, and go to state 71
    TOK_CONTINUE  shift, and go to state 72
    TOK_GOTO      shift, and go to state 73
    TOK_RETURN    shift, and go to state 74
    TOK_PTR_8U    shift, and go to state 75
    TOK_PTR_8S    shift, and go to state 76
    TOK_PTR_16    shift, and go to state 77
    TOK_PTR_F     shift, and go to state 78
    TOK_DEC       shift, and go to state 79
    TOK_INC       shift, and go to state 80
    '{'           shift, and go to state 81
    '}'           shift, and go to state 82

    statement        go to state 83
    core_statement   go to state 84
    ptr_type         go to state 85
    lvalue           go to state 86
    func_expression  go to state 87


state 61

   38 function_var_list: function_var_list ',' . TOK_ID

    TOK_ID  shift, and go to state 88


state 62

   36 function_vars: function_var_list ';' .  [TOK_USERFUNC, TOK_ID, TOK_IF, TOK_DO, TOK_FOR, TOK_WHILE, TOK_BREAK, TOK_CONTINUE, TOK_GOTO, TOK_RETURN, TOK_PTR_8U, TOK_PTR_8S, TOK_PTR_16, TOK_PTR_F, TOK_DEC, TOK_INC, '{', '}']
   39 function_var_list: function_var_list ';' . TOK_LOCAL TOK_ID

    TOK_LOCAL  shift, and go to state 89

    $default  reduce using rule 36 (function_vars)


state 63

   19 array_init_data: number .

    $default  reduce using rule 19 (array_init_data)


state 64

   20 array_init_data: array_init_data . ',' number
   22 array_init: '=' '{' array_init_data . '}'

    ','  shift, and go to state 90
    '}'  shift, and go to state 91


state 65

   88 func_expression: TOK_USERFUNC . '(' func_call_args ')'

    '('  shift, and go to state 92


state 66

   44 statement: TOK_ID . ':' statement
   84 lvalue: TOK_ID .  [TOK_DEC, TOK_INC, TOK_ASSIGN_ADD, TOK_ASSIGN_SUB, TOK_ASSIGN_MUL, TOK_ASSIGN_DIV, TOK_ASSIGN_MOD, TOK_ASSIGN_SHL, TOK_ASSIGN_SHR, TOK_ASSIGN_AND, TOK_ASSIGN_OR, TOK_ASSIGN_XOR, '=']
   85       | TOK_ID . '[' expression ']'
   87 func_expression: TOK_ID . '(' func_call_args ')'

    ':'  shift, and go to state 93
    '['  shift, and go to state 94
    '('  shift, and go to state 95

    $default  reduce using rule 84 (lvalue)


state 67

   48 statement: TOK_IF . '(' expression ')' statement
   49          | TOK_IF . '(' expression ')' statement TOK_ELSE statement

    '('  shift, and go to state 96


state 68

   50 statement: TOK_DO . loop_body TOK_WHILE '(' expression ')' ';'
   58 @1: .
   59 loop_body: . @1 statement

    $default  reduce using rule 58 (@1)

    loop_body  go to state 97
    @1         go to state 98


state 69

   52 statement: TOK_FOR . '(' maybe_core_statement ';' expression ';' maybe_core_statement ')' loop_body
   53          | TOK_FOR . '(' maybe_core_statement ';' ';' maybe_core_statement ')' loop_body

    '('  shift, and go to state 99


state 70

   51 statement: TOK_WHILE . '(' expression ')' loop_body

    '('  shift, and go to state 100


state 71

   54 statement: TOK_BREAK . ';'

    ';'  shift, and go to state 101


state 72

   55 statement: TOK_CONTINUE . ';'

    ';'  shift, and go to state 102


state 73

   45 statement: TOK_GOTO . TOK_ID ';'

    TOK_ID  shift, and go to state 103


state 74

   56 statement: TOK_RETURN . expression ';'
   57          | TOK_RETURN . ';'
   79 ptr_type: . TOK_PTR_8U
   80         | . TOK_PTR_8S
   81         | . TOK_PTR_16
   84 lvalue: . TOK_ID
   85       | . TOK_ID '[' expression ']'
   86       | . ptr_type '[' expression ptr_index ']'
   87 func_expression: . TOK_ID '(' func_call_args ')'
   88                | . TOK_USERFUNC '(' func_call_args ')'
   89                | . TOK_PTR_F '[' expression ']' '(' func_call_args ')'
   90 expression: . func_expression
   91           | . '(' expression ')'
   92           | . TOK_NUMBER
   93           | . TOK_LINE
   94           | . TOK_VMIP
   95           | . TOK_VMSP
   96           | . TOK_VMSFP
   97           | . lvalue
   98           | . '&' TOK_ID
   99           | . '+' expression
  100           | . expression '+' expression
  101           | . expression '-' expression
  102           | . expression '*' expression
  103           | . expression '/' expression
  104           | . expression '%' expression
  105           | . expression TOK_SHL expression
  106           | . expression TOK_SHR expression
  107           | . expression '&' expression
  108           | . expression '|' expression
  109           | . expression '^' expression
  110           | . expression TOK_LAND expression
  111           | . expression TOK_LOR expression
  112           | . '~' expression
  113           | . '-' expression
  114           | . '!' expression
  115           | . expression '<' expression
  116           | . expression TOK_LE expression
  117           | . expression TOK_EQ expression
  118           | . expression TOK_NE expression
  119           | . expression TOK_GE expression
  120           | . expression '>' expression
  121           | . TOK_INC lvalue
  122           | . TOK_DEC lvalue
  123           | . lvalue TOK_INC
  124           | . lvalue TOK_DEC
  125           | . expression '?' expression ':' expression

    TOK_NUMBER    shift, and go to state 104
    TOK_USERFUNC  shift, and go to state 65
    TOK_ID        shift, and go to state 105
    TOK_LINE      shift, and go to state 106
    TOK_VMIP      shift, and go to state 107
    TOK_VMSP      shift, and go to state 108
    TOK_VMSFP     shift, and go to state 109
    TOK_PTR_8U    shift, and go to state 75
    TOK_PTR_8S    shift, and go to state 76
    TOK_PTR_16    shift, and go to state 77
    TOK_PTR_F     shift, and go to state 78
    '&'           shift, and go to state 110
    '+'           shift, and go to state 111
    '-'           shift, and go to state 112
    TOK_DEC       shift, and go to state 113
    TOK_INC       shift, and go to state 114
    ';'           shift, and go to state 115
    '('           shift, and go to state 116
    '~'           shift, and go to state 117
    '!'           shift, and go to state 118

    ptr_type         go to state 85
    lvalue           go to state 119
    func_expression  go to state 120
    expression       go to state 121


state 75

   79 ptr_type: TOK_PTR_8U .

    $default  reduce using rule 79 (ptr_type)


state 76

   80 ptr_type: TOK_PTR_8S .

    $default  reduce using rule 80 (ptr_type)


state 77

   81 ptr_type: TOK_PTR_16 .

    $default  reduce using rule 81 (ptr_type)


state 78

   89 func_expression: TOK_PTR_F . '[' expression ']' '(' func_call_args ')'

    '['  shift, and go to state 122


state 79

   72 core_statement: TOK_DEC . lvalue
   79 ptr_type: . TOK_PTR_8U
   80         | . TOK_PTR_8S
   81         | . TOK_PTR_16
   84 lvalue: . TOK_ID
   85       | . TOK_ID '[' expression ']'
   86       | . ptr_type '[' expression ptr_index ']'

    TOK_ID      shift, and go to state 123
    TOK_PTR_8U  shift, and go to state 75
    TOK_PTR_8S  shift, and go to state 76
    TOK_PTR_16  shift, and go to state 77

    ptr_type  go to state 85
    lvalue    go to state 124


state 80

   71 core_statement: TOK_INC . lvalue
   79 ptr_type: . TOK_PTR_8U
   80         | . TOK_PTR_8S
   81         | . TOK_PTR_16
   84 lvalue: . TOK_ID
   85       | . TOK_ID '[' expression ']'
   86       | . ptr_type '[' expression ptr_index ']'

    TOK_ID      shift, and go to state 123
    TOK_PTR_8U  shift, and go to state 75
    TOK_PTR_8S  shift, and go to state 76
    TOK_PTR_16  shift, and go to state 77

    ptr_type  go to state 85
    lvalue    go to state 125


state 81

   42 statement_list: .
   43               | . statement_list statement
   47 statement: '{' . statement_list '}'

    $default  reduce using rule 42 (statement_list)

    statement_list  go to state 126


state 82

   31 function_def: function_head TOK_ID '(' function_args ')' '{' function_vars function_body '}' .

    $default  reduce using rule 31 (function_def)


state 83

   41 function_body: function_body statement .

    $default  reduce using rule 41 (function_body)


state 84

   46 statement: core_statement . ';'

    ';'  shift, and go to state 127


state 85

   86 lvalue: ptr_type . '[' expression ptr_index ']'

    '['  shift, and go to state 128


state 86

   60 combined_assign: . TOK_ASSIGN_ADD
   61                | . TOK_ASSIGN_SUB
   62                | . TOK_ASSIGN_MUL
   63                | . TOK_ASSIGN_DIV
   64                | . TOK_ASSIGN_MOD
   65                | . TOK_ASSIGN_SHL
   66                | . TOK_ASSIGN_SHR
   67                | . TOK_ASSIGN_AND
   68                | . TOK_ASSIGN_OR
   69                | . TOK_ASSIGN_XOR
   73 core_statement: lvalue . TOK_INC
   74               | lvalue . TOK_DEC
   75               | lvalue . combined_assign expression
   76               | lvalue . '=' expression

    TOK_DEC         shift, and go to state 129
    TOK_INC         shift, and go to state 130
    TOK_ASSIGN_ADD  shift, and go to state 131
    TOK_ASSIGN_SUB  shift, and go to state 132
    TOK_ASSIGN_MUL  shift, and go to state 133
    TOK_ASSIGN_DIV  shift, and go to state 134
    TOK_ASSIGN_MOD  shift, and go to state 135
    TOK_ASSIGN_SHL  shift, and go to state 136
    TOK_ASSIGN_SHR  shift, and go to state 137
    TOK_ASSIGN_AND  shift, and go to state 138
    TOK_ASSIGN_OR   shift, and go to state 139
    TOK_ASSIGN_XOR  shift, and go to state 140
    '='             shift, and go to state 141

    combined_assign  go to state 142


state 87

   70 core_statement: func_expression .

    $default  reduce using rule 70 (core_statement)


state 88

   38 function_var_list: function_var_list ',' TOK_ID .

    $default  reduce using rule 38 (function_var_list)


state 89

   39 function_var_list: function_var_list ';' TOK_LOCAL . TOK_ID

    TOK_ID  shift, and go to state 143


state 90

   15 number: . TOK_NUMBER
   16       | . '+' TOK_NUMBER
   17       | . '-' TOK_NUMBER
   20 array_init_data: array_init_data ',' . number

    TOK_NUMBER  shift, and go to state 39
    '+'         shift, and go to state 40
    '-'         shift, and go to state 41

    number  go to state 144


state 91

   22 array_init: '=' '{' array_init_data '}' .

    $default  reduce using rule 22 (array_init)


state 92
